RESOLVED FIXED300354
Fix crash in WebCore::RenderGrid::gridAreaRangeForOutOfFlow
https://bugs.webkit.org/show_bug.cgi?id=300354
Summary Fix crash in WebCore::RenderGrid::gridAreaRangeForOutOfFlow
zak ridouh
Reported 2025-10-07 17:40:21 PDT
Fix a crash in WebCore::RenderGrid::gridAreaRangeForOutOfFlow where we haven't completed in-flow placement and grid sizing yet, and so our positions vector doesn't have valid values.
Attachments
zak ridouh
Comment 1 2025-10-07 17:41:05 PDT
zak ridouh
Comment 2 2025-10-07 17:43:52 PDT
zak ridouh
Comment 3 2025-10-07 17:45:33 PDT
EWS
Comment 4 2025-10-22 15:49:11 PDT
Committed 301976@main (f64709780430): <https://commits.webkit.org/301976@main> Reviewed commits have been landed. Closing PR #51978 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.